modify urls including the destination icao in them and make adjustments
