# predicted_runway/openapi.yml
@@ -44,13 +44,20 @@ tags:
     description: Runway configuration
 
 paths:
-  /runway-prediction/arrivals/:
+  /arrivals/{destination_icao}/runway-prediction/:
     get:
       tags:
         - Runway Prediction
       summary: predicts the runways in use for specific timestamp and airports
-      operationId: predicted_runway.routes.api.runway_prediction
+      operationId: predicted_runway.routes.api.arrivals_runway_prediction
       parameters:
+        - in: path
+          required: true
+          name: destination_icao
+          description: the ICAO of the destination airport
+          schema:
+            type: string
+            example: EHAM
         - in: query
           required: true
           name: origin_icao
@@ -58,13 +65,6 @@ paths:
           schema:
             type: string
             example: EBBR
-        - in: query
-          required: true
-          name: destination_icao
-          description: the ICAO of the destination airport
-          schema:
-            type: string
-            example: EHAM
         - in: query
           required: true
           name: timestamp
@@ -109,14 +109,14 @@ paths:
             application/json:
                 example: {'error': 'Something went wrong during the prediction. Please try again later.'}
 
-  /runway-config-prediction/arrivals/:
+  /arrivals/{destination_icao}/runway-config-prediction/:
     get:
       tags:
         - Runway Configuration Prediction
       summary: predicts the runways' configuration for specific timestamp and destination airport
-      operationId: predicted_runway.routes.api.runway_config_prediction
+      operationId: predicted_runway.routes.api.arrivals_runway_config_prediction
       parameters:
-        - in: query
+        - in: path
           required: true
           name: destination_icao
           description: the ICAO of the destination airport
